--- a/dev/assets/templates/index.jade
+++ b/dev/assets/templates/index.jade
@@ -3,11 +3,38 @@ html.no-js
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    title
+    title JK
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='css/boilerplate.css')
   body
+
+    #container
+
+        ul
+            li(style="background-image: url(http://placekitten.com/g/1400/900)")
+                .information-slide
+                    h1 Zollverein
+                    h2 Lorem Ipsum
+            li(style="background-image: url(http://placekitten.com/g/1400/900)")
+                .information-slide
+                    h1 Zeche Carl
+                    h2 Lorem Ipsum
+
+            li(style="background-image: url(http://placekitten.com/g/1400/900)")
+                .information-slide
+                    h1 Bench
+                    h2 Lorem Ipsum
+
+    #next
+    #prev
+
+    #info-container.close
+        .information-global
+
+
+        .information-close Close
+        .information-open  Open
 
     script(src="http://localhost:35729/livereload.js")
     script(src="js/boilerplate.js")
